--- a/students/static/css/main.css
+++ b/students/static/css/main.css
@@ -1,36 +1,59 @@
 /* Global Styles */
 
-/*[class*="col-"] {
-  border: 1px solid red;
-}*/
+/*[class*="col-"] {*/
+  /*border: 1px solid red;*/
+/*}*/
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
+
 .alert {
-    /* Ми додали відстань лише зверху елемента: -top */
     margin: 10px 0 5px 0;
 }
-/* знайшли елемент футера по його унікальному ідентифікатору */
-#footer {
-    /* задаємо верхню межу елемента: ширина лінії, тип лінії, колір лінії */
-    border-top: 1px solid #dddddd;
-    /* задаємо внутрішню відстань елемента до верхнього краю */
-    padding-top: 10px;
+
+#text-logo {
+    text-align: left;
+    display: inline-block;
 }
-/* Groups Selector */
+
 #group-selector {
-    margin-top: 30px;
+    margin: 30px 0 0;
+    padding: 0 10px;
+    display: inline-block;
 }
+
 #group-selector select {
-    margin: 0;
-    width: 80%;
+    margin: 0 10px 0 0;
+    height: 26px;
     background-color: #ffffff;
     border: 1px solid #cccccc;
-    height: 30px;
-    line-height: 30px;
     color: #555555;
+    text-align: left;
 }
+
+#user-toolbar {
+    margin: 34px 0 0;
+    height: 30px;
+    text-align: left;
+    display: inline-block;
+}
+
+#lang-selector {
+    margin: 0;
+    padding: 0 10px;
+    display: inline-block;
+}
+
+#lang-selector select {
+    margin: 30px 0 20px;
+    height: 26px;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    color: #555555;
+    text-align: left;
+}
+
 
 .table-caption {
   text-align: center;
@@ -47,6 +70,12 @@ td.student-box,
 td.group-box {
     vertical-align: middle !important;
 }
+
+/*textarea,*/
+/*select,*/
+/*input {*/
+    /*max-width: 250px;*/
+/*}*/
 
 #ajax-loader,
 #ajax-loader-modal {
@@ -76,13 +105,7 @@ td.group-box {
     color: red;
 }
 
-#user-toolbar {
-    margin-top: 30px;
-    float: right;
+#footer {
+    border-top: 1px solid #dddddd;
+    padding-top: 10px;
 }
-
-/*textarea,*/
-/*select,*/
-/*input {*/
-    /*max-width: 300px;*/
-/*}*/
