--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -21,7 +21,7 @@
     {% else %}
         <div class="alert alert-warning">
             {% trans "We automatically save changes into journal while you click inside table cells. " %}
-            <span id="ajax-error">{% trans "Error! Data not saved." %}</span>
+            <span id="errJournalSave">{% trans "Error! Data not saved." %}</span>
         </div>
 
         <p id="journal-nav" class="text-center">
