modal&history refactor

--- a/stud_auth/templates/registration/password_reset_complete.html
+++ b/stud_auth/templates/registration/password_reset_complete.html
@@ -6,9 +6,9 @@
 {% block content %}
 <p>
     {% trans "Your password has been reset!" %}
-    {% blocktrans %}You may now log in{% endblocktrans %}.
+    {% blocktrans %}You may now <a href="{{ login_url }}" class="user-link">log in</a>{% endblocktrans %}.
 </p>
 {% endblock %}
 
-{#{% blocktrans %}You may now <a href="{{ login_url }}">log in</a>{% endblocktrans %}.#}
+
 {# This is used by django.contrib.auth #}
