--- a/stud_auth/templates/registration/password_reset_confirm.html
+++ b/stud_auth/templates/registration/password_reset_confirm.html
@@ -14,6 +14,7 @@
 {% endblock %}
 
 {% block content %}
+{#    <p>{% trans "Enter your new password below to reset your password:" %}</p>#}
     {% crispy form %}
 {% endblock %}
 
