--- a/stud_auth/templates/registration/password_reset_form.html
+++ b/stud_auth/templates/registration/password_reset_form.html
@@ -14,6 +14,11 @@
 {% endblock %}
 
 {% block content %}
+    <p>
+        {% blocktrans %}
+            Forgot your password? Enter your email in the form below and we'll send you instructions for creating a new one.
+        {% endblocktrans %}
+    </p>
     {% crispy form %}
 {% endblock %}
 
