--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -197,10 +197,10 @@
                 {% block footer %}
                     &copy; 2016
                     {% blocktrans %}
-                        <a href="https://pydev777.github.io/" target="_blank" title="My Promo Page">Bilous Vitalii</a>
-                        in practical
+                        <a href="https://pydev777.github.io/" target="_blank" title="My Promo Page">Vitalii Bilous</a>
+                        , practical web development
                         <a href="http://www.vitaliypodoba.com/books/django-for-beginners/" target="_blank" >course</a>
-                        from
+                        with Python/Django from
                         <a href="http://www.vitaliypodoba.com/" target="_blank">Vitalii Podoba </a>
                     {% endblocktrans %}
                 {% endblock footer %}
