--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -13,8 +13,7 @@
     <title id="title">{% trans "Students Accounting Service" %} - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />-->
-<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,8 +23,7 @@
     <![endif]-->
 
     <!-- Bootstrap-datetimepicker CSS -->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />-->
-<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap-datetimepicker.min.css" %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}" />
     {% block extra_css %}{% endblock extra_css %}
 
@@ -250,30 +248,23 @@
     <!-- Javascript Inclusion -->
 
     <!-- jQuery -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- Moment -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/moment.min.js" %}"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/locale/uk.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/uk.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/locale/uk.js"></script>
 
     <!-- jQuery Cookie -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/jquery.cookie.min.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 
     <!-- Bootstrap JS -->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/bootstrap.min.js" %}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <!-- Bootstrap-datetimepicker JS -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
 
     <!-- jQuery form -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/jquery.form.min.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
     <script src="{% url "django.views.i18n.javascript_catalog" %}"></script>
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
