--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -193,14 +193,12 @@
             <div class="col-sm-12">
                 <!-- Start [BLOCK FOOTER] -->
                 {% block footer %}
-                    &copy; 2016
-                    {% blocktrans %}
-                        <a href="https://pydev777.github.io/" target="_blank" title="My Promo Page">Vitalii Bilous</a>
-                        , practical web development
-                        <a href="http://www.vitaliypodoba.com/books/django-for-beginners/" target="_blank" >course</a>
-                        with Python/Django from
-                        <a href="http://www.vitaliypodoba.com/" target="_blank">Vitalii Podoba </a>
-                    {% endblocktrans %}
+                    &copy; 2016,
+                    <a href="https://pydev777.github.io/" target="_blank" title="My Promo Page">{% trans "Vitalii Bilous" %},</a>
+                    {% trans "practical" %}
+                    <a href="http://www.vitaliypodoba.com/books/django-for-beginners/" target="_blank" >{% trans "course" %}</a>
+                    {% trans "of web development with Python" %}/{% trans "Django from" %}
+                    <a href="http://www.vitaliypodoba.com/" target="_blank">{% trans "Vitalii Podoba" %}</a>
                 {% endblock footer %}
                 <!-- End [BLOCK FOOTER] -->
             </div>
