--- a/students/templates/students/pagination.html
+++ b/students/templates/students/pagination.html
@@ -1,17 +1,25 @@
 {% if is_paginated %}
     <nav>
         <ul class="pagination">
-            <li>
-                <a href="{{ base_url }}?page=1{%if order_by %}&amp;order_by={{ order_by }}{%endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&laquo;</a>
-            </li>
+            {% if object_list.has_previous %}
+                <li>
+                    <a href="{{ base_url }}?page=1{%if order_by %}&amp;order_by={{ order_by }}{%endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&laquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled"><span><span aria-hidden="true">&laquo;</span></span></li>
+            {% endif %}
             {% for p in paginator.page_range %}
                 <li {% if object_list.number == p %}class="active"{% endif %}>
                     <a href="{{ base_url }}?page={{ p }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">{{ p }}</a>
                 </li>
             {% endfor %}
-            <li>
-                <a href="{{ base_url }}?page={{ paginator.num_pages }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&raquo;</a>
-            </li>
+            {% if object_list.has_next %}
+                <li>
+                    <a href="{{ base_url }}?page={{ paginator.num_pages }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&raquo;</a>
+                </li>
+            {% else %}
+                <li class="disabled"><span><span aria-hidden="true">&raquo;</span></span></li>
+            {% endif %}
         </ul>
     </nav>
 {% endif %}
